// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders landscape correctly 1`] = `
<A4Page
  landscape={true}
>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "color": "DARKGRAY",
          "fontFamily": "Roboto Condensed, sans-serif",
          "fontSize": "16px",
          "left": "0",
          "marginLeft": "22px",
          "marginTop": "12px",
          "position": "absolute",
          "textTransform": "capitalize",
          "top": "0",
        }
      }
    >
      A4 
      landscape
       preview
    </div>
    <div
      style={
        Object {
          "padding": "40px 20px 20px 20px",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px dashed GAINSBORO",
            "height": "210mm",
            "width": "297mm",
          }
        }
      >
        <div>
          Children
        </div>
      </div>
    </div>
  </div>
</A4Page>
`;

exports[`renders portrait correctly 1`] = `
<A4Page>
  <div
    style={
      Object {
        "display": "flex",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "color": "DARKGRAY",
          "fontFamily": "Roboto Condensed, sans-serif",
          "fontSize": "16px",
          "left": "0",
          "marginLeft": "22px",
          "marginTop": "12px",
          "position": "absolute",
          "textTransform": "capitalize",
          "top": "0",
        }
      }
    >
      A4 
      portrait
       preview
    </div>
    <div
      style={
        Object {
          "padding": "40px 20px 20px 20px",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px dashed GAINSBORO",
            "height": "297mm",
            "width": "210mm",
          }
        }
      >
        <div>
          Children
        </div>
      </div>
    </div>
  </div>
</A4Page>
`;
